syntax = 'proto3';

package identity;

import "common.proto";

message RpcContact {
  optional string link = 1;
  string name = 2;
  string value = 3;
  string type = 4;
  bool isPrimary = 5;
  bool isVisible = 6;
}

message RpcContactList {
  repeated RpcContact items = 1;
}

service ContactService {
  rpc getAll (common.Empty) returns (RpcContactList) {}
}
